segunda pre entrega sin sass

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- inicio de navbar -->
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <img src="./img/logoframar.png" alt="Logo" style="width:100px;">
+        <img class="logoframar" src="./img/logoframar.png" alt="Logo" style="width:100px;">
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="#">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
+                    <a class="nav-link" href="#nosotros">Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./pages/contacto.html">Contacto</a>
@@ -100,7 +100,7 @@
                     <hr class="separador">
                 </div>
             </aside>
-            <aside class="col-md-8 nright aside-right">
+            <aside id="nosotros" class="col-md-8 nright aside-right">
                 <h2>DONDE NOS ENCONTRAMOS</h2>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12762.488639503816!2d-60.3308933!3d-36.8993863!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959445b6e1f54cef%3A0xbaa4366bcc36a9e1!2sFramar%20Autopartes!5e0!3m2!1ses!2sar!4v1681771740056!5m2!1ses!2sar"
