carrusel con javascript

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="estilos.css">
+    <script src="script.js" defer></script>
     <link rel="icon" href="./img/logoframar.ico">
     <title>FRAMAR Autopartes</title>
 </head>
@@ -113,6 +114,28 @@
 
 
     <!-- fin de nosotros -->
+
+    <!-- inicio de carrusel -->
+    <h2 class="titulomarcas">MARCAS CON LAS QUE TRABAJAMOS</h2>
+    <div class="wrapper">
+        <i id="left" class="fa-solid fa-angle-left"></i>
+        <div class="carousel">
+            <img src="img/peugeot-logo-5.png" alt="img" draggable="false">
+            <img src="img/chevrolet.png" alt="img" draggable="false">
+            <img src="img/logovw.png" alt="img" draggable="false">
+            <img src="img/logoford.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+            <img src="img/logorenault.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+        </div>
+        <i id="right" class="fa-solid fa-angle-right"></i>
+    </div>
+
+    <!-- fin de carrusel -->
 
     <!-- inicio de fin de pagina -->
     <div class="findepagina">
