--- a/index.html
+++ b/index.html
@@ -34,13 +34,16 @@
                     <a class="nav-link" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Productos</a>
+                    <a class="nav-link" href="./pages/productos.html">Productos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#nosotros">Nosotros</a>
+                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./pages/user.html"><i class="fa-regular fa-user"></i></a>
                 </li>
             </ul>
         </div>
@@ -75,6 +78,28 @@
     </div>
 
     <!-- fin de presupuestoss -->
+
+    <!-- inicio de carrusel -->
+    <h2 class="titulomarcas">MARCAS CON LAS QUE TRABAJAMOS</h2>
+    <div class="wrapper">
+        <i id="left" class="fa-solid fa-angle-left"></i>
+        <div class="carousel">
+            <img src="img/peugeot-logo-5.png" alt="img" draggable="false">
+            <img src="img/chevrolet.png" alt="img" draggable="false">
+            <img src="img/logovw.png" alt="img" draggable="false">
+            <img src="img/logoford.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+            <img src="img/logorenault.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+            <img src="img/logofiat.png" alt="img" draggable="false">
+        </div>
+        <i id="right" class="fa-solid fa-angle-right"></i>
+    </div>
+
+    <!-- fin de carrusel -->
 
     <!-- inicio de nosotros -->
 
@@ -115,27 +140,6 @@
 
     <!-- fin de nosotros -->
 
-    <!-- inicio de carrusel -->
-    <h2 class="titulomarcas">MARCAS CON LAS QUE TRABAJAMOS</h2>
-    <div class="wrapper">
-        <i id="left" class="fa-solid fa-angle-left"></i>
-        <div class="carousel">
-            <img src="img/peugeot-logo-5.png" alt="img" draggable="false">
-            <img src="img/chevrolet.png" alt="img" draggable="false">
-            <img src="img/logovw.png" alt="img" draggable="false">
-            <img src="img/logoford.png" alt="img" draggable="false">
-            <img src="img/logofiat.png" alt="img" draggable="false">
-            <img src="img/logorenault.png" alt="img" draggable="false">
-            <img src="img/logofiat.png" alt="img" draggable="false">
-            <img src="img/logofiat.png" alt="img" draggable="false">
-            <img src="img/logofiat.png" alt="img" draggable="false">
-            <img src="img/logofiat.png" alt="img" draggable="false">
-            <img src="img/logofiat.png" alt="img" draggable="false">
-        </div>
-        <i id="right" class="fa-solid fa-angle-right"></i>
-    </div>
-
-    <!-- fin de carrusel -->
 
     <!-- inicio de fin de pagina -->
     <div class="findepagina">
