--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
             <img src="img/logoford.png" alt="img" draggable="false">
             <img src="img/logofiat.png" alt="img" draggable="false">
             <img src="img/logorenault.png" alt="img" draggable="false">
-            <img src="img/logofiat.png" alt="img" draggable="false">
-            <img src="img/logofiat.png" alt="img" draggable="false">
-            <img src="img/logofiat.png" alt="img" draggable="false">
-            <img src="img/logofiat.png" alt="img" draggable="false">
-            <img src="img/logofiat.png" alt="img" draggable="false">
+            <img src="img/logocitroen.png" alt="img" draggable="false">
+            <img src="img/logobmw.png" alt="img" draggable="false">
+            <img src="img/logotoyota.png" alt="img" draggable="false">
+            <img src="img/logonissan.png" alt="img" draggable="false">
+            <img src="img/logohonda.png" alt="img" draggable="false">
         </div>
         <i id="right" class="fa-solid fa-angle-right"></i>
     </div>
