--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="jumbotron">
         <h1>REPUESTOS ORIGINALES Y ALTERNATIVOS</h1>
         <p>Vicente Lopez 1874 - Olavarria - Buenos Aires</p>
-        <button type="button" class="btn btn-danger" href="https://walink.co/464f41">mas info</button>
+        <button type="button" class="btn btn-danger" onclick="location.href='https://walink.co/464f41';">mas info</button>
     </div>
     <!-- fin de jumbotrom -->
 
@@ -121,8 +121,7 @@
                     <h3><i class="fa-solid fa-envelope"></i> autopartesframar@hotmail.com</h3>
                     <hr class="separador">
                     <h2 class="presupuesto">SOLICITANOS TU PRESUPUESTO</h2>
-                    <button type="button" class="btn btn-danger presu" href="https://walink.co/464f41">cotiza
-                        ahora</button>
+                    <button type="button" class="btn btn-danger presu" onclick="location.href='https://walink.co/464f41';">cotiza ahora</button>
                     <hr class="separador">
                 </div>
             </aside>
